objects/Advisory_Event__c.object
<CustomObject>
    <fields>
        <fullName>Actual__c</fullName>
        <inlineHelpText>Total of actual line items entered on Final Cost Details.</inlineHelpText>
        <label>Final Cost</label>
        <summarizedField>Event_Budget__c.Actual__c</summarizedField>
        <summaryForeignKey>Event_Budget__c.Advisory_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banner</label>
        <referenceTo>Communication_Template__c</referenceTo>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Begins__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Begins</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Budget_Attend__c</fullName>
        <description>Created for CR-20151130-9424.</description>
        <inlineHelpText>Will track the number of attendees budgeted for an Event or Session.</inlineHelpText>
        <label>Budget Attend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <inlineHelpText>Total budgeted amount.</inlineHelpText>
        <label>Contracted Budget</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of the Events Management project</description>
        <label>Cost Center</label>
        <referenceTo>Cost_Center__c</referenceTo>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Begins__c</fullName>
        <label>Date Begins</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ends__c</fullName>
        <label>Date Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Private__c</fullName>
        <description>Created as part of the Events Management project</description>
        <inlineHelpText>Contracting and Event Notes</inlineHelpText>
        <label>Description - Private</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description_Public__c</fullName>
        <description>Created as part of the Events Management project</description>
        <inlineHelpText>Do not use - for future use</inlineHelpText>
        <label>Description - Public</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>EAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ends__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Ends</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <inlineHelpText>Total estimate amount.</inlineHelpText>
        <label>Running Estimate</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Flag__c</fullName>
        <description>Created as part of the Events Management project</description>
        <formula>CASE(Status_Category__c,
&quot;Planned&quot;,IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Planned (Yellow)&quot;),
&quot;Open&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Open (Green)&quot;),
&quot;Closed&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Closed (Red)&quot;),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <description>Created as part of the Events Management project</description>
        <displayFormat>MN-{00000}</displayFormat>
        <label>Event Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Final_Attend__c</fullName>
        <description>Created for CR-20151130-9424.</description>
        <inlineHelpText>To track the number of registrants attended an event.</inlineHelpText>
        <label>Final Attend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Historical_EP_ID__c</fullName>
        <description>Created as part of CR-20150603-8987 to track Historical EventPro Id.</description>
        <label>Historical EP ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Closed__c</fullName>
        <description>Created as part of the Events Management project</description>
        <formula>IF(
Status_Category__c = &quot;Closed&quot;,
TRUE,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length_Days__c</fullName>
        <description>Created as part of the Events Management project</description>
        <formula>(Date_Ends__c -  Date_Begins__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length - Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_Hours__c</fullName>
        <description>Created as part of the Events Management project</description>
        <formula>(Ends__c -  Begins__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length - Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Room / Location for the breakout session</description>
        <label>Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of the Events Management project</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of the Events Management project</description>
        <label>Master Event</label>
        <referenceTo>Advisory_Event__c</referenceTo>
        <relationshipName>Meetings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mirror_Registrations__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Mirror Registrations</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Child to Parent only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of the Events Management project</description>
        <label>Parent Event</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Event, Series</value>
            </filterItems>
            <filterItems>
                <field>Advisory_Event__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Series</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Session</value>
            </filterItems>
            <filterItems>
                <field>Advisory_Event__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Event</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Advisory_Event__c</referenceTo>
        <relationshipLabel>Advisory Events</relationshipLabel>
        <relationshipName>Advisory_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of the Events Management project</description>
        <label>Primary Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_Name__c</fullName>
        <description>Created as part of Event Management.</description>
        <inlineHelpText>Meeting title as displayed in attendee communications</inlineHelpText>
        <label>Public Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>Created as part of the Events Management project</description>
        <formula>CEILING(MONTH( Date_Begins__c ) / 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of the Events Management project</description>
        <label>Registration Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Meetings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Notes__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Registration Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrations_Available__c</fullName>
        <formula>Registrations_Total_Allowed__c - Registrations_Total_to_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registrations - Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registrations_Industry_to_Date__c</fullName>
        <description>Created as part of the Events Management Project.</description>
        <label>Registrations – Industry to Date</label>
        <summaryFilterItems>
            <field>Event_Registration__c.Membership_Status_Text__c</field>
            <operation>notEqual</operation>
            <value>Employee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Event_Registration__c.Status__c</field>
            <operation>equals</operation>
            <value>Registered</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Event_Registration__c.Industry__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Registration__c.Advisory_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Registrations_Online_to_Date__c</fullName>
        <description>Created as part of the Events Management Project</description>
        <label>Registrations – Online to Date</label>
        <summaryFilterItems>
            <field>Event_Registration__c.Membership_Status_Text__c</field>
            <operation>notEqual</operation>
            <value>Employee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Event_Registration__c.Origin__c</field>
            <operation>equals</operation>
            <value>Online</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Event_Registration__c.Status__c</field>
            <operation>equals</operation>
            <value>Registered</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Registration__c.Advisory_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Registrations_Percent_Available__c</fullName>
        <formula>IF( NOT(ISBLANK(Registrations_Total_Allowed__c)), (Registrations_Total_Allowed__c - Registrations_Total_to_Date__c ) / Registrations_Total_Allowed__c, null)</formula>
        <label>Registrations - % Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Registrations_Total_Allowed__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Registrations - Total Allowed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registrations_Total_to_Date__c</fullName>
        <description>Created as part of the Events Managment Project.</description>
        <label>Registrations –Total to Date</label>
        <summaryFilterItems>
            <field>Event_Registration__c.Membership_Status_Text__c</field>
            <operation>notEqual</operation>
            <value>Employee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Event_Registration__c.Status__c</field>
            <operation>equals</operation>
            <value>Registered</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Registration__c.Advisory_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Registrations_filled__c</fullName>
        <formula>IF( NOT(ISBLANK(Registrations_Total_Allowed__c)), Registrations_Total_to_Date__c / Registrations_Total_Allowed__c, null)</formula>
        <label>Registrations - % filled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Registrations_industry__c</fullName>
        <formula>Registrations_Total_Allowed__c /Registrations_Industry_to_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registrations - % industry</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rules_Programs__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Rules - Programs</label>
        <picklist>
            <picklistValues>
                <fullName>Use parent&apos;s rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Establish independent rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clone rules from parent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rules_Thresholds__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Rules - Thresholds</label>
        <picklist>
            <picklistValues>
                <fullName>Use parent&apos;s rules</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Establish independent rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clone rules from parent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rules_Titles__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Rules - Titles</label>
        <picklist>
            <picklistValues>
                <fullName>Use parent&apos;s rules</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Establish independent rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clone rules from parent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Series_Type__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Series Type</label>
        <picklist>
            <picklistValues>
                <fullName>National meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshows and speaking events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network opportunities/event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP meetings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Short Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Category__c</fullName>
        <description>Created as part of the Events Management project</description>
        <formula>CASE(Status__c,
/* Planned */
&quot;Forecasted&quot;,&quot;Planned&quot;,
&quot;On Calendar&quot;,&quot;Planned&quot;,
/* Open */
&quot;Open - Registration&quot;,&quot;Open&quot;,
&quot;Open - Manual Only&quot;,&quot;Open&quot;,
&quot;Open - Waitlist Only&quot;,&quot;Open&quot;,
/* Closed */
&quot;Closed - Completed&quot;,&quot;Closed&quot;,
&quot;Closed - Cancelled&quot;,&quot;Closed&quot;,
&quot;Other&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Forecasted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Manual Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Waitlist Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_String__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Title String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ultimate_Program_Parent__c</fullName>
        <description>This field is to hold the Parent Id if Rule&apos;s Program field is set to &quot;Use parent&apos;s rule&quot;.</description>
        <label>Ultimate Program Parent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Threshold_Parent__c</fullName>
        <description>This field is to hold the Parent Id if Rule&apos;s Threshold field is set to &quot;Use parent&apos;s rule&quot;.</description>
        <label>Ultimate Threshold Parent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Title_Parent__c</fullName>
        <description>This field is to hold the Parent Id if Rule&apos;s Title field is set to &quot;Use parent&apos;s rule&quot;.</description>
        <label>Ultimate Title Parent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Created as part of the Events Management project</description>
        <formula>TEXT( YEAR( Date_Begins__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Advisory Event</label>
    <listViews>
        <fullName>Events</fullName>
        <columns>NAME</columns>
        <columns>Short_Name__c</columns>
        <columns>Public_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>Date_Begins__c</columns>
        <columns>Date_Ends__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Advisory_Event__c.Event</value>
        </filters>
        <label>Events</label>
    </listViews>
    <listViews>
        <fullName>Series</fullName>
        <columns>NAME</columns>
        <columns>Short_Name__c</columns>
        <columns>Public_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>Date_Begins__c</columns>
        <columns>Date_Ends__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Advisory_Event__c.Series</value>
        </filters>
        <label>Series</label>
    </listViews>
    <listViews>
        <fullName>Session</fullName>
        <columns>NAME</columns>
        <columns>Short_Name__c</columns>
        <columns>Public_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>Begins__c</columns>
        <columns>Ends__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Advisory_Event__c.Session</value>
        </filters>
        <label>Session</label>
    </listViews>
    <nameField>
        <label>Advisory Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advisory Events</pluralLabel>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Event that is either independent or linked to a Series</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Series</fullName>
        <active>true</active>
        <description>Collection of Events over a specified period of time that are linked to the same program/membership</description>
        <label>Series</label>
    </recordTypes>
    <recordTypes>
        <fullName>Session</fullName>
        <active>true</active>
        <description>Breakout session</description>
        <label>Session</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Cannot_close_with_Registrations</fullName>
        <active>true</active>
        <description>If Status = “Closed - Completed” and Registrations to Date are &gt; 0</description>
        <errorConditionFormula>AND( 
    ISPICKVAL(Status__c, &quot;Closed - Completed&quot;),
     Registrations_Total_to_Date__c &gt; 0
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You cannot Close this event without first indicating the attendees.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Parent</fullName>
        <active>true</active>
        <description>Session Events must identify a Parent Event</description>
        <errorConditionFormula>AND(
    RecordType.Name = &apos;Session&apos;,
    ISBLANK( Parent_Event__c)
)</errorConditionFormula>
        <errorMessage>You must identify a parent</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Event_Date</fullName>
        <active>true</active>
        <description>Date Begin must be prior to Date End.</description>
        <errorConditionFormula>Date_Begins__c &gt;  Date_Ends__c</errorConditionFormula>
        <errorDisplayField>Date_Begins__c</errorDisplayField>
        <errorMessage>Date Begins must be prior to Date Ends .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Event_Date_Time</fullName>
        <active>true</active>
        <description>Begins must be prior to Ends Date.</description>
        <errorConditionFormula>Begins__c &gt; Ends__c</errorConditionFormula>
        <errorDisplayField>Begins__c</errorDisplayField>
        <errorMessage>Begins must be prior to Ends.</errorMessage>
    </validationRules>
</CustomObject>